Fix expando button alignment

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -477,10 +477,6 @@ span#notification.fade {
   display:block;
 }
 
-.wholepost .icon.expando-btn {
-    margin-top: 0;
-}
-
 .hasmail i{
   color: #101010;
 }
